<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EBEBEB"
        android:padding="20dp"
        tools:context=".ui.MainActivity">


        <TextView
            android:id="@+id/tv_basics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:fontFamily="@font/metropolisregular"
            android:text="@string/basics"
            android:textColor="#5c5c5c"
            android:textSize="@dimen/_28ssp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/metropolismedium"
            android:text="@string/what_is_you_gender"
            android:textColor="#5b5b5b"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_basics">

        </TextView>

        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_gender">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:fontFamily="@font/metropolismedium"
                android:padding="10dp"
                android:text="@string/male"
                android:textColor="#5b5b5b"
                android:textSize="@dimen/_12ssp">

            </RadioButton>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:fontFamily="@font/metropolismedium"
                android:padding="10dp"
                android:text="@string/female"
                android:textColor="#5b5b5b"
                android:textSize="@dimen/_12ssp">

            </RadioButton>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:fontFamily="@font/metropolismedium"
                android:padding="10dp"
                android:text="@string/other"
                android:textColor="#5b5b5b"
                android:textSize="@dimen/_12ssp">

            </RadioButton>

        </RadioGroup>

        <TextView
            android:id="@+id/tv_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/metropolismedium"
            android:text="@string/describe_you_age_group"
            android:textColor="#5b5b5b"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_gender">

        </TextView>

        <RadioGroup
            android:id="@+id/rg_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_age">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:padding="10dp"
                android:text="@string/_17_25"
                android:textColor="#5b5b5b"
                android:textSize="@dimen/_12sdp">

            </RadioButton>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:padding="10dp"
                android:text="@string/_26_38"
                android:textColor="#5b5b5b"
                android:textSize="@dimen/_12sdp">

            </RadioButton>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:padding="10dp"
                android:text="@string/_39_52"
                android:textColor="#5b5b5b"
                android:textSize="@dimen/_12sdp">

            </RadioButton>

        </RadioGroup>

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/metropolismedium"
            android:text="@string/career_category"
            android:textColor="#5b5b5b"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_age">

        </TextView>


        <RadioGroup
            android:id="@+id/rg_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_category">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:padding="10dp"
                android:text="@string/employee"
                android:textColor="#5b5b5b"
                android:textSize="@dimen/_12ssp">

            </RadioButton>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:padding="10dp"
                android:text="@string/manager"
                android:textColor="#5b5b5b"
                android:textSize="@dimen/_12ssp">

            </RadioButton>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:padding="10dp"
                android:text="@string/owner"
                android:textColor="#5b5b5b"
                android:textSize="@dimen/_12ssp">

            </RadioButton>

        </RadioGroup>

        <TextView
            android:id="@+id/tv_basics_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/metropolismedium"
            android:lineSpacingExtra="@dimen/_5sdp"
            android:text="@string/by_finalizing_the_information_above_ans_clicking_confirm_you_will_agree_on_our_term_of_conditions"
            android:textAlignment="center"
            android:textColor="#5b5b5b"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_category">

        </TextView>

        <Button
            android:id="@+id/btn_agree"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button"
            android:padding="10dp"
            android:text="@string/agree_confirm"
            android:textAllCaps="false"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_basics_desc">

        </Button>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>







