<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#EBEBEB"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/password"
        android:fontFamily="@font/metropolislight"
        android:textSize="@dimen/_20sdp"
        android:textColor="#6F6F6F">

    </TextView>


    <TextView
        android:id="@+id/tv_enter_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/please_enter_your_password"
        android:fontFamily="@font/metropolismedium"
        android:textColor="#656565"
        android:textSize="@dimen/_12sdp">

    </TextView>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:background="@drawable/rounded_edit_text"
        android:inputType="textPassword">

    </EditText>



    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_password"
       app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button"
        android:text="@string/confirm"
        android:fontFamily="@font/metropolismedium"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="20dp">

    </Button>
    <Button
    android:id="@+id/btn_cancel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/et_password"
       app:layout_constraintRight_toRightOf="parent"
    android:layout_marginEnd="20dp"
    android:textAllCaps="false"
    android:textColor="@color/white"
    android:background="@drawable/rounded_button_2"
    android:text="@string/cancel"
    android:fontFamily="@font/metropolismedium"
    android:textSize="@dimen/_10sdp"
    android:layout_marginTop="20dp">

</Button>



</androidx.constraintlayout.widget.ConstraintLayout>